data/derived/sp14/progs/unify/prog1497.ml.out
Characters 165-166:
  let (_, res) = List.fold_left f base args in
                                ^
Error: This expression has type 'a list * 'b list -> 'c -> bool
       but an expression was expected of type
         'a list * 'b list -> 'c -> 'a list * 'b list
       Type bool is not compatible with type 'a list * 'b list 
